--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>이종욱</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
-  <link rel="shortcut icon" href="./images/favicon.ico">
+  <link rel="shortcut icon" href="./favicon.ico">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
