--- a/python/python.html
+++ b/python/python.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>파이썬 - 개요</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
+  <link rel="shortcut icon" href="../favicon.ico">
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -13,8 +14,8 @@
     <div id="logo"><a href=../index.html><img src="../images/logo.png" width="80px" height="80px"></a></div>
     <nav id="nav_top">
       <ul id="nav_top_ul">
-        <li><a href=python.html>파이썬</a></li>
-        <li>R</li>
+        <li><a href="./python.html">파이썬</a></li>
+        <li><a href="../r/r.html">R</a></li>
         <li>오라클</li>
         <li>HTML/CSS</li>
       </ul>
