--- a/python/python.html
+++ b/python/python.html
@@ -44,6 +44,6 @@
       그리고 내일배움카드로 국비지원 직업훈련과정에 참여하여 배우게 되었습니다.</p>
       <p>이 곳에 배운 것들을 정리해보고자 합니다.</p>
     </section>
-    <footer>2023 이종욱 j1wook@naver.com</footer>
+    <footer>j1wook@naver.com</footer>
 </body>
 </html>
