--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         소프트웨어 개발 및 응용 과정'</em> 중에 있습니다.
     </p>
   </section>
-  <footer>j1wook@naver.com</footer>
+  <footer>이종욱 - j1wook@naver.com</footer>
 </body>
 
 </html>
