--- a/python/python_install.html
+++ b/python/python_install.html
@@ -62,6 +62,6 @@
     <p>스크롤을 '<strong>P</strong>'가 있는 곳으로 내리면 위와 같이 설치된 모습을 볼 수 있습니다.</p>
     <p>이상으로 설치를 마칩니다.</p>
   </section>
-  <footer>j1wook@naver.com</footer>
+  <footer>이종욱 - j1wook@naver.com</footer>
 </body>
 </html>
