--- a/python/python_introduce.html
+++ b/python/python_introduce.html
@@ -42,6 +42,6 @@
 		<p>프로그래밍 언어의 인기도를 측정한 '<strong>TIOBE index</strong>' 2023년 3월 지표에서 '<strong>파이썬(Python)</strong>'이 1위를 차지하였습니다.</p>
 		<p>※ 본 글은 파이썬 공식 홈페이지와 위키백과, 네이버 사전을 참고하여 작성하였습니다.</p>
 	</section>
-	<footer>j1wook@naver.com</footer>
+	<footer>이종욱 - j1wook@naver.com</footer>
 </body>
 </html>
