--- a/r/r.html
+++ b/r/r.html
@@ -14,7 +14,7 @@
     <div id="logo"><a href=../index.html><img src="../images/logo.png" width="80px" height="80px"></a></div>
     <nav id="nav_top">
       <ul id="nav_top_ul">
-        <li><a href=.../python/python.html>파이썬</a></li>
+        <li><a href=../python/python.html>파이썬</a></li>
         <li>R</li>
         <li>오라클</li>
         <li>HTML/CSS</li>
@@ -34,7 +34,7 @@
     빅데이터 시대이다보니 데이터 분석이 중요해진 것 같습니다.<br />
     책들은 '파이썬 데이터 분석'과 'R 데이터 분석'으로 나뉘었습니다.<br />
     각각의 언어를 바탕으로 데이터를 분석하는 것 같았습니다.</p>
-    <img class="img_in_content" src="./images/r_book.png" width="142.2px" height="182.6px" style="padding-left: 100px;">
+    <img class="img_in_content" src="./images/r_book.png" width="196.9px" height="252.9px" style="padding-left: 100px;">
     <p>파이썬은 조금씩 알아가는 중이었지만 R은 전혀 몰랐습니다.<br />
     그래서 언젠가 한 번 공부를 해봐야겠다고 생각하고 있었는데 마침 들어간 직업훈련과정에 R 데이터 분석이 포함되어 있었습니다.</p>
     <p>분량은 다른 언어에 비해 많지 않았고 난이도도 다른 언어에 비해 높지 않았습니다.</p>
