--- a/python/python_install.html
+++ b/python/python_install.html
@@ -33,7 +33,7 @@
     <p>파이썬으로 프로그래밍하기 위해서는 파이썬을 설치해야 합니다.<br />
     파이썬 공식 홈페이지(<strong><a href=https://www.python.org/ target="_blank"><u>https://www.python.org/</u></a></strong>)에 접속합니다.
     </p>
-    <img class="img_in_content" src="./images/python_install.png">
+    <img class="img_in_content img_border_radius" src="./images/python_install.png">
     <p>접속하면 위와 같은 화면이 나오는데 마우스 커서를 ① 표시된 '<strong>Downloads</strong>'로 가져갑니다.<br />
     그러면 아래로 메뉴가 나타나는데 ② 표시된 <strong>Python 3.x.x</strong> 버튼을 클릭합니다.<br />
     그러면 윈도우 운영체제에 설치할 수 있는 파이썬 최신 버전이 다운로드됩니다.<br />
@@ -52,13 +52,13 @@
     <img class="img_in_content" src="./images/setup_was_successful.png">
     <p>설치가 진행되고 이후 설치가 완료되면 '<strong>Close</strong>' 버튼을 누릅니다.</p>
     <p>다음은 설치된 내용을 확인해보겠습니다(윈도우 11 기준).</p>
-    <img class="img_in_content" src="./images/check.png">
+    <img class="img_in_content" src="./images/check.png" style="border-radius: 0 0 10px 10px;">
     <p>
     ① <strong>시작</strong> 버튼을 누릅니다.<br />
     ② '<strong>맞춤</strong>' 란에 설치된 파일이 보입니다.<br />
     ③ 시작 메뉴 위에 '<strong>모든 앱  ></strong>'을 클릭합니다.
     </p>
-    <img class="img_in_content" src="./images/installed.png">
+    <img class="img_in_content img_border_radius" src="./images/installed.png">
     <p>스크롤을 '<strong>P</strong>'가 있는 곳으로 내리면 위와 같이 설치된 모습을 볼 수 있습니다.</p>
     <p>이상으로 설치를 마칩니다.</p>
   </section>
