--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>이종욱</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
-  <link rel="shortcut icon" href="./favicon.ico">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
   <header>
-    <div id="logo"><a href=./index.html><img src="./images/logo.png" alt="logo" width="80px" height="80px"></a></div>
+    <div id="logo"><a href=./index.html>이종욱</a></div>
     <nav id="nav_top">
       <ul id="nav_top_ul">
         <li><a href=./python/python.html>파이썬</a></li>
@@ -31,7 +30,7 @@
         소프트웨어 개발 및 응용 과정'</em> 중에 있습니다.
     </p>
   </section>
-  <footer>이종욱 - j1wook@naver.com</footer>
+  <footer>j1wook@naver.com</footer>
 </body>
 
 </html>
