--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <div id="logo"><a href=./index.html>이종욱</a></div>
+    <div id="logo"><a id="logo_a" href=./index.html>이종욱</a></div>
     <nav id="nav_top">
       <ul id="nav_top_ul">
         <li><a href=./python/python.html>파이썬</a></li>
