--- a/python/python.html
+++ b/python/python.html
@@ -6,12 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>파이썬 - 개요</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
-  <link rel="shortcut icon" href="../favicon.ico">
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
   <header>
-    <div id="logo"><a href=../index.html><img src="../images/logo.png" width="80px" height="80px"></a></div>
+    <div id="logo"><a id="logo_a" href=../index.html>이종욱</a></div>
     <nav id="nav_top">
       <ul id="nav_top_ul">
         <li><a href="./python.html">파이썬</a></li>
@@ -44,6 +43,6 @@
       그리고 내일배움카드로 국비지원 직업훈련과정에 참여하여 배우게 되었습니다.</p>
       <p>이 곳에 배운 것들을 정리해보고자 합니다.</p>
     </section>
-    <footer>이종욱 - j1wook@naver.com</footer>
+    <footer>j1wook@naver.com</footer>
 </body>
 </html>
