--- a/python/python_introduce.html
+++ b/python/python_introduce.html
@@ -6,12 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>파이썬 - 소개</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
-	<link rel="shortcut icon" href="../favicon.ico">
 	<link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 	<header>
-		<div id="logo"><a href=../index.html><img src="../images/logo.png" width="80px" height="80px"></a></div>
+		<div id="logo"><a id="logo_a" href=../index.html>이종욱</a></div>
 		<nav id="nav_top">
 			<ul id="nav_top_ul">
 				<li><a href=python.html>파이썬</a></li>
@@ -33,8 +32,13 @@
 		<p>'<strong>파이썬(Python)</strong>'은 <strong>프로그래밍 언어</strong>입니다.</p>
 		<p>네덜란드인 '<strong>귀도 반 로섬(Guido van Rossum)</strong>'이 1989년 크리스마스 주에 자신을 몰두시킬 <strong>취미 프로그래밍 프로젝트</strong>로 만들기 시작한 언어입니다.<br />
 		발표는 1991년에 하였습니다.</p>
-		<img class="img_in_content" width="87px" height="86.85px" src="./images/python.png">
-		<img class="img_in_content" style="margin-left:50px" width="197.4px" height="165.8px" src="./images/guido.png">
+
+		<div class="section_img">
+			<img class="img_in_content" width="87px" height="86.85px" src="./images/python.png" alt="python_logo">
+		
+			<img class="img_in_content" style="margin-left:50px;" width="197.4px" height="165.8px" src="./images/guido.png" alt="guido">
+		</div>
+		
 		<p>'<strong>파이썬(Python)</strong>'이라는 이름은 귀도가 좋아하는 코미디인 '<strong>Monty Python's Flying Circus</strong>'에서 따온 것입니다.</p>
 		<p>'<strong>파이썬(python)</strong>'의 사전적 의미는 '<strong>비단뱀</strong>'입니다.<br />
 		그리고 <strong>그리스신화</strong>에서 <strong>아폴로</strong>가 <strong>델파이</strong>에서 퇴치한 거대한 <strong>뱀</strong>이기도 합니다.<br />
@@ -42,6 +46,6 @@
 		<p>프로그래밍 언어의 인기도를 측정한 '<strong>TIOBE index</strong>' 2023년 3월 지표에서 '<strong>파이썬(Python)</strong>'이 1위를 차지하였습니다.</p>
 		<p>※ 본 글은 파이썬 공식 홈페이지와 위키백과, 네이버 사전을 참고하여 작성하였습니다.</p>
 	</section>
-	<footer>이종욱 - j1wook@naver.com</footer>
+	<footer>j1wook@naver.com</footer>
 </body>
 </html>
