--- a/python/python_install.html
+++ b/python/python_install.html
@@ -6,12 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>파이썬 - 설치</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
-  <link rel="shortcut icon" href="../favicon.ico">
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
   <header>
-    <div id="logo"><a href=../index.html><img src="../images/logo.png" width="80px" height="80px"></a></div>
+    <div id="logo"><a id="logo_a" href=../index.html>이종욱</a></div>
     <nav id="nav_top">
       <ul id="nav_top_ul">
         <li><a href=python.html>파이썬</a></li>
@@ -62,6 +61,6 @@
     <p>스크롤을 '<strong>P</strong>'가 있는 곳으로 내리면 위와 같이 설치된 모습을 볼 수 있습니다.</p>
     <p>이상으로 설치를 마칩니다.</p>
   </section>
-  <footer>이종욱 - j1wook@naver.com</footer>
+  <footer>j1wook@naver.com</footer>
 </body>
 </html>
