--- a/r/r.html
+++ b/r/r.html
@@ -6,12 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>R - 개요</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
-  <link rel="shortcut icon" href="../favicon.ico">
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
   <header>
-    <div id="logo"><a href=../index.html><img src="../images/logo.png" width="80px" height="80px"></a></div>
+    <div id="logo"><a id="logo_a" href=../index.html>이종욱</a></div>
     <nav id="nav_top">
       <ul id="nav_top_ul">
         <li><a href=../python/python.html>파이썬</a></li>
@@ -24,7 +23,7 @@
   <nav id="nav_sub">
     <ul>
         <li>개요</li>
-        <li>소개</li>
+        <li><a href="./r_introduce.html">소개</a></li>
         <li>설치</li>
     </ul>
   </nav>
@@ -34,12 +33,14 @@
     빅데이터 시대이다보니 데이터 분석이 중요해진 것 같습니다.<br />
     책들은 '파이썬 데이터 분석'과 'R 데이터 분석'으로 나뉘었습니다.<br />
     각각의 언어를 바탕으로 데이터를 분석하는 것 같았습니다.</p>
-    <img class="img_in_content" src="./images/r_book.png" width="196.9px" height="252.9px" style="padding-left: 100px;">
+    <div class="section_img">
+      <img class="img_in_content" src="./images/r_book.png" width="196.9px" height="252.9px">
+    </div>
     <p>파이썬은 조금씩 알아가는 중이었지만 R은 전혀 몰랐습니다.<br />
     그래서 언젠가 한 번 공부를 해봐야겠다고 생각하고 있었는데 마침 들어간 직업훈련과정에 R 데이터 분석이 포함되어 있었습니다.</p>
     <p>분량은 다른 언어에 비해 많지 않았고 난이도도 다른 언어에 비해 높지 않았습니다.</p>
     <p>추가적으로 더 공부하거나 추후에 활용하게 될 일이 있을지 모르겠지만 이곳에 한 번 정리해봅니다.</p>
   </section>
-  <footer>이종욱 - j1wook@naver.com</footer>
+  <footer>j1wook@naver.com</footer>
 </body>
 </html>
