--- a/python/python.html
+++ b/python/python.html
@@ -22,7 +22,7 @@
   </header>
     <nav id="nav_sub">
       <ul>
-        <li>개요</li>
+        <li class="selected_li">개요</li>
         <li><a href=python_introduce.html>소개</a></li>
         <li><a href=python_install.html>설치</a></li>
       </ul>
