--- a/r/r.html
+++ b/r/r.html
@@ -22,7 +22,7 @@
   </header>
   <nav id="nav_sub">
     <ul>
-        <li>개요</li>
+        <li class="selected_li">개요</li>
         <li><a href="./r_introduce.html">소개</a></li>
         <li>설치</li>
     </ul>
