--- a/python/python_install.html
+++ b/python/python_install.html
@@ -13,7 +13,7 @@
     <div id="logo"><a id="logo_a" href=../index.html>이종욱</a></div>
     <nav id="nav_top">
       <ul id="nav_top_ul">
-        <li><a style="color:crimson" href=python.html>파이썬</a></li>
+        <li><a style="color:coral" href=python.html>파이썬</a></li>
         <li><a href="../r/r.html">R</a></li>
         <li>오라클</li>
         <li>HTML/CSS</li>
