--- a/r/r.html
+++ b/r/r.html
@@ -14,7 +14,7 @@
     <nav id="nav_top">
       <ul id="nav_top_ul">
         <li><a href=../python/python.html>파이썬</a></li>
-        <li>R</li>
+        <li class="selected_nav_top">R</li>
         <li>오라클</li>
         <li>HTML/CSS</li>
       </ul>
