--- a/r/r_introduce.html
+++ b/r/r_introduce.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>R - 소개</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
-  <link rel="shortcut icon" href="../favicon.ico">
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -15,7 +14,7 @@
     <nav id="nav_top">
       <ul id="nav_top_ul">
         <li><a href=../python/python.html>파이썬</a></li>
-        <li>R</li>
+        <li class="selected_nav_top">R</li>
         <li>오라클</li>
         <li>HTML/CSS</li>
       </ul>
@@ -24,15 +23,19 @@
   <nav id="nav_sub">
     <ul>
         <li><a href="./r.html">개요</a></li>
-        <li>소개</li>
+        <li class="selected_li">소개</li>
         <li>설치</li>
     </ul>
   </nav>
   <section>
     <h1>소개</h1>
-    <p>R은 데이터 분석을 통한 통계, 시각화에 특화된 프로그래밍 언어이다.</p>
-    <p>뉴질랜드 오클랜드 대학의 로버트 젠틀맨(Robert Gentleman)과 로스 이하카(Ross Ihaka)가 개발하였다.<br />
-    두 사람의 이름 앞글자를 따 'R'이라는 이름을 갖게 되었다.</p>
+    <p>'R'은 데이터 분석을 통한 통계, 시각화에 특화된 프로그래밍 언어입니다.</p>
+    <p>1993년 뉴질랜드 오클랜드 대학의 '로버트 젠틀맨(Robert Gentleman)'과 '로스 이하카(Ross Ihaka)'가 개발하였습니다.<br />
+    두 사람의 이름 앞글자를 따 'R'이라는 이름을 갖게 되었습니다.</p>
+    <div class="section_img">
+      <img class="img_in_content" src="./images/Rlogo.png" alt="Rlogo">
+    </div>
+    <p>프로그래밍 언어의 인기도를 측정한 'TIOBE index' 2023년 3월 지표에서 'R'이 16위를 차지하였습니다.</p>
   </section>
   <footer>j1wook@naver.com</footer>
 </body>
