--- a/r/r.html
+++ b/r/r.html
@@ -24,7 +24,7 @@
     <ul>
         <li class="selected_li">개요</li>
         <li><a href="./r_introduce.html">소개</a></li>
-        <li>설치</li>
+        <li><a href="./r_install.html">설치</a></li>
     </ul>
   </nav>
   <section>
