--- a/r/r_install.html
+++ b/r/r_install.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>R - 소개</title>
+  <title>R - 설치</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
   <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -23,19 +23,16 @@
   <nav id="nav_sub">
     <ul>
         <li><a href="./r.html">개요</a></li>
-        <li class="selected_li">소개</li>
-        <li><a href="./r_install.html">설치</a></li>
+        <li>소개</li>
+        <li class="selected_li">설치</li>
     </ul>
   </nav>
   <section>
-    <h1>소개</h1>
-    <p>'R'은 데이터 분석을 통한 통계, 시각화에 특화된 프로그래밍 언어입니다.</p>
-    <p>1993년 뉴질랜드 오클랜드 대학의 '로버트 젠틀맨(Robert Gentleman)'과 '로스 이하카(Ross Ihaka)'가 개발하였습니다.<br />
-    두 사람의 이름 앞글자를 따 'R'이라는 이름을 갖게 되었습니다.</p>
-    <div class="section_img">
-      <img class="img_in_content" src="./images/Rlogo.png" alt="Rlogo">
-    </div>
-    <p>프로그래밍 언어의 인기도를 측정한 'TIOBE index' 2023년 3월 지표에서 'R'이 16위를 차지하였습니다.</p>
+    <h1>설치</h1>
+    <p>R을 사용하기 위해서는 R을 설치해야 합니다.<br />
+    R 공식 홈페이지(<https: href="https://www.r-project.org/">https://www.r-project.org/</a>)에 접속합니다.</p>
+    <img class="img_in_content" src="./images/r_org.png" width=698.4px height=372.8px alt="r-project.org">
+    <p>왼쪽 메뉴 중 '다운로드'의 'CRAN'을 클릭합니다.</p>
   </section>
   <footer>j1wook@naver.com</footer>
 </body>
