--- a/r/r_install.html
+++ b/r/r_install.html
@@ -30,10 +30,10 @@
   <section>
     <h1>설치</h1>
     <p>R을 사용하기 위해서는 R을 설치해야 합니다.<br />
-    R 공식 홈페이지(<https: href="https://www.r-project.org/">https://www.r-project.org/</a>)에 접속합니다.</p>
-    <img class="img_in_content" src="./images/r_org.png" width=698.4px height=372.8px alt="r-project.org">
+    R 공식 홈페이지(<a href="https://www.r-project.org/" target="_blank"><u>https://www.r-project.org/</u></a>)에 접속합니다.</p>
+    <img class="img_in_content border_line" src="./images/r_org.png" width=698.4px height=372.8px alt="r-project.org">
     <p>왼쪽 메뉴 중 '다운로드'의 'CRAN'을 클릭합니다.</p>
-    <img class="img_in_content" src="./images/select_korea.png" alt="select_korea">
+    <img class="img_in_content border_line" src="./images/select_korea.png" alt="select_korea">
     <p>'CRAN Mirrors' 페이지에서 스크롤을 내려 'Korea'의 'http://cran.yu.ac.kr/'을 클릭합니다.</p>
   </section>
   <footer>j1wook@naver.com</footer>
