--- a/r/r.html
+++ b/r/r.html
@@ -34,7 +34,7 @@
     책들은 '파이썬 데이터 분석'과 'R 데이터 분석'으로 나뉘었습니다.<br />
     각각의 언어를 바탕으로 데이터를 분석하는 것 같았습니다.</p>
     <div class="section_img">
-      <img class="img_in_content" src="./images/r_book.png" width="196.9px" height="252.9px">
+      <img class="img_in_content border_line" src="./images/r_book.png" width="196.9px" height="252.9px">
     </div>
     <p>파이썬은 조금씩 알아가는 중이었지만 R은 전혀 몰랐습니다.<br />
     그래서 언젠가 한 번 공부를 해봐야겠다고 생각하고 있었는데 마침 들어간 직업훈련과정에 R 데이터 분석이 포함되어 있었습니다.</p>
