--- a/python/python_install.html
+++ b/python/python_install.html
@@ -32,7 +32,7 @@
     <p>파이썬으로 프로그래밍하기 위해서는 파이썬을 설치해야 합니다.<br />
     파이썬 공식 홈페이지(<strong><a href=https://www.python.org/ target="_blank"><u>https://www.python.org/</u></a></strong>)에 접속합니다.
     </p>
-    <img class="img_in_content img_border_radius" src="./images/python_install.png" width="627.3px" height="326.7px">
+    <img class="img_in_content img_border_radius size_down" src="./images/python_install.png" width="627.3px" height="326.7px">
     <p>접속하면 위와 같은 화면이 나오는데 마우스 커서를 ① 표시된 '<strong>Downloads</strong>'로 가져갑니다.<br />
     그러면 아래로 메뉴가 나타나는데 ② 표시된 <strong>Python 3.x.x</strong> 버튼을 클릭합니다.<br />
     그러면 윈도우 운영체제에 설치할 수 있는 파이썬 최신 버전이 다운로드됩니다.<br />
