--- a/python/python_install.html
+++ b/python/python_install.html
@@ -39,7 +39,7 @@
     다운로드가 완료되면 브라우저에 나타난 파일 이름을 클릭하거나<br />
     파일 탐색기의 Downloads 폴더에서 해당 파일을 실행합니다.
     </p>
-    <img class="img_in_content" src="./images/python_setup.png">
+    <img class="img_in_content size_down" src="./images/python_setup.png">
     <p>실행하면 위와 같은 창이 나타나는데<br />
     먼저 아래에 있는 '<strong>Add python.exe to PATH</strong>'에 체크를 해줍니다.<br />
     그리고 나서 '<strong>Install Now</strong>'를 클릭합니다.<br />
@@ -47,11 +47,11 @@
     <strong>이 앱이 디바이스를 변경할 수 있도록 허용하시겠어요?</strong> 라고 나오는데<br />
     '<strong>예</strong>'를 클릭합니다.
     </p>
-    <img class="img_in_content" src="./images/python_setup_progress.png"><br /><br />
-    <img class="img_in_content" src="./images/setup_was_successful.png">
+    <img class="img_in_content size_down" src="./images/python_setup_progress.png"><br /><br />
+    <img class="img_in_content size_down" src="./images/setup_was_successful.png">
     <p>설치가 진행되고 이후 설치가 완료되면 '<strong>Close</strong>' 버튼을 누릅니다.</p>
     <p>다음은 설치된 내용을 확인해보겠습니다(윈도우 11 기준).</p>
-    <img class="img_in_content" src="./images/check.png" style="border-radius: 0 0 10px 10px;">
+    <img class="img_in_content size_down" src="./images/check.png" style="border-radius: 0 0 10px 10px;">
     <p>
     ① <strong>시작</strong> 버튼을 누릅니다.<br />
     ② '<strong>맞춤</strong>' 란에 설치된 파일이 보입니다.<br />
