--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <h1>안녕하세요</h1>
     <p>
       <strong>이종욱</strong>입니다.<br />
-      현재 <span style="color:blue">영등포</span>에 위치한 <span style="color:darkblue">휴먼교육센터학원</span>에서<br />
+      현재 <span style="color:darkblue">영등포</span>에 위치한 <span style="color:darkblue">휴먼교육센터학원</span>에서<br />
       <em>'<span style="color:cornflowerblue">파이썬(Python)</span>, <span style="color:crimson">자바(Java)</span>기반 AI활용<br />
         소프트웨어 개발 및 응용 과정'</em> 중에 있습니다.
     </p>
