--- a/python/python.html
+++ b/python/python.html
@@ -31,7 +31,7 @@
       <h1>개요</h1>
       <p>2010년대에 파이썬 열풍이 불었던 것 같습니다.<br>
       컴퓨터를 다루는 것과는 관계없는 삶을 살고 있던<br>
-      저에게도 '<strong>파이썬(Python)</strong>'이라는 생소한 단어가 들려왔으니 말이죠.<br></p>
+      저에게도 '<span style="color:cornflowerblue">파이썬(Python)</span>'이라는 생소한 단어가 들려왔으니 말이죠.<br></p>
       <p>그래서 그 때 인터넷 검색도 해보고 서점에 가서 살짝 보기도 하였습니다.<br>
       웹 개발 등 다양한 분야에 쓰이는 것 같았습니다.<br>
       하지만 거기까지였습니다.<br></p>
@@ -41,7 +41,7 @@
       또한, 프로그래밍 언어 순위에도 상위에 랭크되어 있는 것으로 나왔습니다.<br>
       그래서 유튜브, 블로그, 책을 통해 조금씩 알아갔습니다.<br>
       그리고 내일배움카드로 국비지원 직업훈련과정에 참여하여 배우게 되었습니다.</p>
-      <p>이 곳에 배운 것들을 정리해보고자 합니다.</p>
+      <p>이 곳에 배운 것들을 정리해 보고자 합니다.</p>
     </section>
     <footer>j1wook@naver.com</footer>
 </body>
