--- a/python/python_introduce.html
+++ b/python/python_introduce.html
@@ -29,8 +29,8 @@
 	</nav>
 	<section>
 		<h1>소개</h1>
-		<p>'<strong>파이썬(Python)</strong>'은 <strong>프로그래밍 언어</strong>입니다.</p>
-		<p>네덜란드인 '<strong>귀도 반 로섬(Guido van Rossum)</strong>'이 1989년 크리스마스 주에 자신을 몰두시킬 <strong>취미 프로그래밍 프로젝트</strong>로 만들기 시작한 언어입니다.<br />
+		<p>'<span style="color:cornflowerblue">파이썬(Python)</span>'은 프로그래밍 언어입니다.</p>
+		<p>네덜란드인 '<span style="color:orange">귀도 반 로섬(Guido van Rossum)</span>'이 1989년 크리스마스 주에 자신을 몰두시킬 <strong>취미 프로그래밍 프로젝트</strong>로 만들기 시작한 언어입니다.<br />
 		발표는 1991년에 하였습니다.</p>
 
 		<div class="section_img">
