--- a/r/r_install.html
+++ b/r/r_install.html
@@ -37,6 +37,8 @@
     <p>'CRAN Mirrors' 페이지에서 스크롤을 내려 'Korea'의 'http://cran.yu.ac.kr/'을 클릭합니다.</p>
     <img class="img_in_content border_line size_down" src="./images/for_windows.png" alt="for_windows" width="647.2" height="174.4">
     <p>'The Comprehensive R Archive Network' 페이지에서 'Download R for Windows'를 클릭합니다.</p>
+    <img class="img_in_content border_line" src="./images/click_install_r.png" alt="click_install_r">
+    <p>'R for Windows' 페이지에서 'install R for the first time'을 클릭합니다.</p>
   </section>
   <footer>j1wook@naver.com</footer>
 </body>
