--- a/python/python_install.html
+++ b/python/python_install.html
@@ -30,35 +30,32 @@
   <section>
     <h1>설치</h1>
     <p>파이썬으로 프로그래밍하기 위해서는 파이썬을 설치해야 합니다.<br />
-    파이썬 공식 홈페이지(<strong><a href=https://www.python.org/ target="_blank"><u>https://www.python.org/</u></a></strong>)에 접속합니다.
+    파이썬 공식 홈페이지(<a href=https://www.python.org/ target="_blank"><span><u>https://www.python.org/</u></span></a>)에 접속합니다.
     </p>
     <img class="img_in_content img_border_radius size_down" src="./images/python_install.png" width="627.3px" height="326.7px">
-    <p>접속하면 위와 같은 화면이 나오는데 마우스 커서를 ① 표시된 '<strong>Downloads</strong>'로 가져갑니다.<br />
-    그러면 아래로 메뉴가 나타나는데 ② 표시된 <strong>Python 3.x.x</strong> 버튼을 클릭합니다.<br />
+    <p>접속하면 위와 같은 화면이 나오는데 마우스 커서를 ① 표시된 '<span>Downloads</span>'로 가져갑니다.<br />
+    그러면 아래로 메뉴가 나타나는데 ② 표시된 <span>Python 3.x.x</span> 버튼을 클릭합니다.<br />
     그러면 윈도우 운영체제에 설치할 수 있는 파이썬 최신 버전이 다운로드됩니다.<br />
-    다운로드가 완료되면 브라우저에 나타난 파일 이름을 클릭하거나<br />
-    파일 탐색기의 Downloads 폴더에서 해당 파일을 실행합니다.
+    다운로드가 완료되면 브라우저에 나타난 파일 이름을 클릭하거나 파일 탐색기의 Downloads 폴더에서 해당 파일을 실행합니다.
     </p>
     <img class="img_in_content size_down" src="./images/python_setup.png">
-    <p>실행하면 위와 같은 창이 나타나는데<br />
-    먼저 아래에 있는 '<strong>Add python.exe to PATH</strong>'에 체크를 해줍니다.<br />
-    그리고 나서 '<strong>Install Now</strong>'를 클릭합니다.<br />
-    그러면 '<strong>사용자 계정 컨트롤</strong>' 창이 나타납니다.<br />
-    <strong>이 앱이 디바이스를 변경할 수 있도록 허용하시겠어요?</strong> 라고 나오는데<br />
-    '<strong>예</strong>'를 클릭합니다.
+    <p>실행하면 위와 같은 창이 나타나는데 먼저 아래에 있는 '<span>Add python.exe to PATH</span>'에 체크를 해줍니다.<br />
+    그리고 나서 '<span>Install Now</span>'를 클릭합니다.<br />
+    그러면 '<span>사용자 계정 컨트롤</span>' 창이 나타납니다.<br />
+    '<span>이 앱이 디바이스를 변경할 수 있도록 허용하시겠어요?</span>'   라고 나오는데 '<span>예</span>'를 클릭합니다.
     </p>
     <img class="img_in_content size_down" src="./images/python_setup_progress.png"><br /><br />
     <img class="img_in_content size_down" src="./images/setup_was_successful.png">
-    <p>설치가 진행되고 이후 설치가 완료되면 '<strong>Close</strong>' 버튼을 누릅니다.</p>
+    <p>설치가 진행되고 이후 설치가 완료되면 '<span>Close</span>'버튼을 누릅니다.</p>
     <p>다음은 설치된 내용을 확인해보겠습니다(윈도우 11 기준).</p>
     <img class="img_in_content size_down" src="./images/check.png" style="border-radius: 0 0 10px 10px;">
     <p>
-    ① <strong>시작</strong> 버튼을 누릅니다.<br />
-    ② '<strong>맞춤</strong>' 란에 설치된 파일이 보입니다.<br />
-    ③ 시작 메뉴 위에 '<strong>모든 앱  ></strong>'을 클릭합니다.
+    ① <span>시작 버튼</span>을 누릅니다.<br />
+    ② '<span>맞춤</span>' 란에 설치된 파일이 보입니다.<br />
+    ③ 시작 메뉴 위에 '<span>모든 앱 ></span>'을 클릭합니다.
     </p>
     <img class="img_in_content img_border_radius" src="./images/installed.png">
-    <p>스크롤을 '<strong>P</strong>'가 있는 곳으로 내리면 위와 같이 설치된 모습을 볼 수 있습니다.</p>
+    <p>스크롤을 '<span>P</span>'가 있는 곳으로 내리면 위와 같이 설치된 모습을 볼 수 있습니다.</p>
     <p>이상으로 설치를 마칩니다.</p>
   </section>
   <footer>j1wook@naver.com</footer>
