--- a/python/python_introduce.html
+++ b/python/python_introduce.html
@@ -34,9 +34,9 @@
 		발표는 1991년에 하였습니다.</p>
 
 		<div class="section_img">
-			<img class="img_in_content" src="./images/python.png" alt="python_logo">
+			<img class="img_in_content" width="87px" height="86.85px" src="./images/python.png" alt="python_logo">
 		
-			<img class="img_in_content" id="img_right" src="./images/guido.png" alt="guido">
+			<img class="img_in_content" id="img_right" width="197.4px" height="165.8px" src="./images/guido.png" alt="guido">
 		</div>
 		
 		<p>'<strong>파이썬(Python)</strong>'이라는 이름은 귀도가 좋아하는 코미디인 '<strong>Monty Python's Flying Circus</strong>'에서 따온 것입니다.</p>
