--- a/r/r.html
+++ b/r/r.html
@@ -29,16 +29,19 @@
   </nav>
   <section>
     <h1>개요</h1>
-    <p>코딩 공부를 하다보니 '데이터 분석'을 주제로 한 책들이 눈에 띄었습니다.<br />
-    빅데이터 시대이다보니 데이터 분석이 중요해진 것 같습니다.<br />
-    책들은 '파이썬 데이터 분석'과 'R 데이터 분석'으로 나뉘었습니다.<br />
+    <p>코딩 공부를 하다보니 '<span>데이터 분석</span>'을 주제로 한 책들이 눈에 띄었습니다.<br />
+    <span>빅데이터</span> 시대이다보니 데이터 분석이 중요해진 것 같습니다.<br />
+    책들은 '<span>파이썬 데이터 분석</span>'과 '<span>R 데이터 분석</span>'으로 나뉘었습니다.<br />
     각각의 언어를 바탕으로 데이터를 분석하는 것 같았습니다.</p>
     <div class="section_img">
       <img class="img_in_content border_line" src="./images/r_book.png" width="196.9px" height="252.9px">
     </div>
-    <p>파이썬은 조금씩 알아가는 중이었지만 R은 전혀 몰랐습니다.<br />
-    그래서 언젠가 한 번 공부를 해봐야겠다고 생각하고 있었는데 마침 들어간 직업훈련과정에 R 데이터 분석이 포함되어 있었습니다.</p>
-    <p>분량은 다른 언어에 비해 많지 않았고 난이도도 다른 언어에 비해 높지 않았습니다.</p>
+    <p>파이썬은 조금씩 알아가는 중이었지만 <span>R</span>은 전혀 몰랐습니다.<br />
+    그래서 언젠가 한 번 공부를 해봐야겠다고 생각하고 있었는데 마침 들어간 직업훈련과정에 <span>R 데이터 분석</span>이 포함되어 있었습니다.</p>
+    <p>분량은 다른 언어에 비해 많지 않았고 난이도도 다른 언어에 비해 높지 않았습니다.<br />
+    물론 조금 더 깊이 들어간다면 어렵겠지만 말이죠.<br />
+    한 예로, 'NCS 국가직무능력표준' 자료를 보니 어렵게 느껴졌습니다.
+    </p>
     <p>추가적으로 더 공부하거나 추후에 활용하게 될 일이 있을지 모르겠지만 이곳에 한 번 정리해봅니다.</p>
   </section>
   <footer>j1wook@naver.com</footer>
