--- a/r/r_introduce.html
+++ b/r/r_introduce.html
@@ -29,13 +29,13 @@
   </nav>
   <section>
     <h1>소개</h1>
-    <p>'R'은 데이터 분석을 통한 통계, 시각화에 특화된 프로그래밍 언어입니다.</p>
-    <p>1993년 뉴질랜드 오클랜드 대학의 '로버트 젠틀맨(Robert Gentleman)'과 '로스 이하카(Ross Ihaka)'가 개발하였습니다.<br />
-    두 사람의 이름 앞글자를 따 'R'이라는 이름을 갖게 되었습니다.</p>
+    <p>'<span>R</span>'은 데이터 분석을 통한 통계, 시각화에 특화된 프로그래밍 언어입니다.</p>
+    <p>1993년 뉴질랜드 오클랜드 대학의 '로버트 젠틀맨(<span>R</span>obert Gentleman)'과 '로스 이하카(<span>R</span>oss Ihaka)'가 개발하였습니다.<br />
+    두 사람의 이름 앞글자를 따 '<span>R</span>'이라는 이름을 갖게 되었습니다.</p>
     <div class="section_img">
       <img class="img_in_content" src="./images/Rlogo.png" alt="Rlogo">
     </div>
-    <p>프로그래밍 언어의 인기도를 측정한 'TIOBE index' 2023년 3월 지표에서 'R'이 16위를 차지하였습니다.</p>
+    <p>프로그래밍 언어의 인기도를 측정한 'PYPL(PopularitY of Programming Language)' 2023년 3월 지표에서 '<span>R</span>'이 7위를 차지하였습니다.</p>
   </section>
   <footer>j1wook@naver.com</footer>
 </body>
