--- a/r/r_install.html
+++ b/r/r_install.html
@@ -24,22 +24,46 @@
     <ul>
         <li><a href="./r.html">개요</a></li>
         <li><a href="./r_introduce.html">소개</a></li>
-        <li class="selected_li">설치</li>
+        <li class="selected_li">설치1</li>
     </ul>
   </nav>
   <section>
-    <h1>설치</h1>
+    <h1>설치1</h1>
     <p>R을 사용하기 위해서는 R을 설치해야 합니다.<br />
-    R 공식 홈페이지(<a href="https://www.r-project.org/" target="_blank"><u>https://www.r-project.org/</u></a>)에 접속합니다.</p>
-    <img class="img_in_content border_line size_down" src="./images/r_org.png" width=698.4px height=372.8px alt="r-project.org">
-    <p>왼쪽 메뉴 중 '다운로드'의 'CRAN'을 클릭합니다.</p>
-    <img class="img_in_content border_line size_down" src="./images/select_korea.png" alt="select_korea">
-    <p>'CRAN Mirrors' 페이지에서 스크롤을 내려 'Korea'의 'http://cran.yu.ac.kr/'을 클릭합니다.</p>
-    <img class="img_in_content border_line size_down" src="./images/for_windows.png" alt="for_windows" width="647.2" height="174.4">
-    <p>'The Comprehensive R Archive Network' 페이지에서 'Download R for Windows'를 클릭합니다.</p>
-    <img class="img_in_content border_line" src="./images/click_install_r.png" alt="click_install_r">
-    <p>'R for Windows' 페이지에서 'install R for the first time'을 클릭합니다.</p>
-  </section>
+    '설치1'에서는 R을 설치하고 
+    R 공식 홈페이지(<a href="https://www.r-project.org/" target="_blank"><span><u>https://www.r-project.org/</u></span></a>)에 접속합니다.</p>
+    <img class="img_in_content border_line size_down" src="./images/install/r_org.png" width=698.4px height=372.8px alt="r-project.org">
+    <p>왼쪽 메뉴 중 '<span>Download</span>'의 '<span>CRAN</span>'을 클릭합니다.</p>
+    <img class="img_in_content border_line size_down" src="./images/install/select_korea.png" alt="select_korea">
+    <p>'<span>CRAN Mirrors</span>' 페이지에서 스크롤을 내려 '<span>Korea</span>'의 '<span>http://cran.yu.ac.kr/</span>'을 클릭합니다(달라질 수 있음).</p>
+    <img class="img_in_content border_line size_down" src="./images/install/for_windows.png" alt="for_windows" width="647.2" height="174.4">
+    <p>'<span>The Comprehensive R Archive Network</span>' 페이지에서 '<span>Download R for Windows</span>'를 클릭합니다.</p>
+    <img class="img_in_content border_line" src="./images/install/click_install_r.png" alt="click_install_r">
+    <p>'<span>R for Windows</span>' 페이지에서 '<span>install R for the first time</span>'을 클릭합니다.</p>
+    <img class="img_in_content border_line" src="./images/install/click_download.png" alt="click_download.png">
+    <p>'<span>R-x.x.x for Windows</span>' 페이지에서 '<span>Download R-x.x.x for Windows</span>'를 클릭합니다.</p>
+    <p>다운로드가 완료되면 브라우저에 나타난 파일 이름을 클릭하거나 파일 탐색기의 Downloads 폴더에서 해당 파일을 실행합니다.<br />
+    그러면 '<span>사용자 계정 컨트롤</span>' 창이 나타납니다.<br />
+    '<span>이 앱이 디바이스를 변경할 수 있도록 허용하시겠어요?</span>' 라고 나오는데 '<span>예</span>'를 클릭합니다.</p>
+    <img class="img_in_content" src="./images/install/lang.png" alt="lang">
+    <p>'<span>설치 언어 선택</span>' 창이 나타나면 '<span>한국어</span>'를 확인하고 '<span>확인</span>' 버튼을 클릭합니다.</p>
+    <img class="img_in_content" src="./images/install/install_info.png" alt="install_info">
+    <p>'<span>설치 - R for Windows x.x.x - 정보</span>' 창이 나타나면 정보를 읽고 '<span>다음(N)</span>' 버튼을 클릭합니다.</p>
+    <img class="img_in_content" src="./images/install/install_path.png" alt="install_path">
+    <p>기본값 또는 원하는 설치 위치를 선택하고 '<span>다음(N)</span>' 버튼을 클릭합니다.</p>
+    <img class="img_in_content" src="./images/install/component.png" alt="component">
+    <p>구성 요소를 확인하고 '<span>다음(N)</span>' 버튼을 클릭합니다.</p>
+    <img class="img_in_content" src="./images/install/startup_no.png" alt="startup_no">
+    <p>스타트업 옵션을 확인하고 '<span>다음(N)</span>' 버튼을 클릭합니다.</p>
+    <img class="img_in_content" src="./images/install/start_menu_folder.png" alt="start_menu_folder">
+    <p>시작 메뉴 폴더 선택을 확인하고 '<span>다음(N)</span>' 버튼을 클릭합니다.</p>
+    <img class="img_in_content" src="./images/install/additional.png" alt="additional">
+    <p>추가 사항 적용을 확인하고 '<span>다음(N)</span>' 버튼을 클릭합니다.</p>
+    <img class="img_in_content" src="./images/install/installing.png" alt="installing"><br />
+    <img class="img_in_content" src="./images/install/install_done.png" alt="install_done">
+    <p>설치가 완료되었습니다.<br />
+    '<span>완료(F)</span>' 버튼을 클릭합니다.</p>
+  </section>  
   <footer>j1wook@naver.com</footer>
 </body>
 </html>
