--- a/r/r_install.html
+++ b/r/r_install.html
@@ -30,7 +30,7 @@
   <section>
     <h1>설치1</h1>
     <p>R을 사용하기 위해서는 R을 설치해야 합니다.<br />
-    '설치1'에서는 R을 설치하고 
+    '설치1'에서는 R을 설치하겠습니다.<br />
     R 공식 홈페이지(<a href="https://www.r-project.org/" target="_blank"><span><u>https://www.r-project.org/</u></span></a>)에 접속합니다.</p>
     <img class="img_in_content border_line size_down" src="./images/install/r_org.png" width=698.4px height=372.8px alt="r-project.org">
     <p>왼쪽 메뉴 중 '<span>Download</span>'의 '<span>CRAN</span>'을 클릭합니다.</p>
