--- a/python/python_install.html
+++ b/python/python_install.html
@@ -22,7 +22,7 @@
   </header>
   <nav id="nav_sub">
     <ul>
-      <li><a href=python.html>개요</a></li>
+      <li><a href=python.html>머리말</a></li>
       <li><a href=python_introduce.html>소개</a></li>
       <li class="selected_li">설치</li>
     </ul>
