--- a/python/python.html
+++ b/python/python.html
@@ -22,13 +22,13 @@
   </header>
     <nav id="nav_sub">
       <ul>
-        <li class="selected_li">개요</li>
+        <li class="selected_li">머리말</li>
         <li><a href=python_introduce.html>소개</a></li>
         <li><a href=python_install.html>설치</a></li>
       </ul>
     </nav>
     <section>
-      <h1>개요</h1>
+      <h1>머리말</h1>
       <p>2010년대에 파이썬 열풍이 불었던 것 같습니다.<br>
       컴퓨터를 다루는 것과는 관계없는 삶을 살고 있던<br>
       저에게도 '<span style="color:cornflowerblue">파이썬(Python)</span>'이라는 생소한 단어가 들려왔으니 말이죠.<br></p>
