--- a/python/python_introduce.html
+++ b/python/python_introduce.html
@@ -22,7 +22,7 @@
 	</header>
 	<nav id="nav_sub">
 		<ul>
-			<li><a href=python.html>개요</a></li>
+			<li><a href=python.html>머리말</a></li>
 			<li class="selected_li">소개</li>
 			<li><a href=python_install.html>설치</a></li>
 		</ul>
