--- a/r/r.html
+++ b/r/r.html
@@ -22,13 +22,13 @@
   </header>
   <nav id="nav_sub">
     <ul>
-        <li class="selected_li">개요</li>
+        <li class="selected_li">머리말</li>
         <li><a href="./r_introduce.html">소개</a></li>
         <li><a href="./r_install.html">설치1</a></li>
     </ul>
   </nav>
   <section>
-    <h1>개요</h1>
+    <h1>머리말</h1>
     <p>코딩 공부를 하다보니 '<span>데이터 분석</span>'을 주제로 한 책들이 눈에 띄었습니다.<br />
     <span>빅데이터</span> 시대이다보니 데이터 분석이 중요해진 것 같습니다.<br />
     책들은 '<span>파이썬 데이터 분석</span>'과 '<span>R 데이터 분석</span>'으로 나뉘었습니다.<br />
