--- a/r/r_install.html
+++ b/r/r_install.html
@@ -22,7 +22,7 @@
   </header>
   <nav id="nav_sub">
     <ul>
-        <li><a href="./r.html">개요</a></li>
+        <li><a href="./r.html">머리말</a></li>
         <li><a href="./r_introduce.html">소개</a></li>
         <li class="selected_li">설치1</li>
     </ul>
@@ -38,29 +38,29 @@
     <p>'<span>CRAN Mirrors</span>' 페이지에서 스크롤을 내려 '<span>Korea</span>'의 '<span>http://cran.yu.ac.kr/</span>'을 클릭합니다(달라질 수 있음).</p>
     <img class="img_in_content border_line size_down" src="./images/install/for_windows.png" alt="for_windows" width="647.2" height="174.4">
     <p>'<span>The Comprehensive R Archive Network</span>' 페이지에서 '<span>Download R for Windows</span>'를 클릭합니다.</p>
-    <img class="img_in_content border_line" src="./images/install/click_install_r.png" alt="click_install_r">
+    <img class="img_in_content border_line size_down" src="./images/install/click_install_r.png" alt="click_install_r">
     <p>'<span>R for Windows</span>' 페이지에서 '<span>install R for the first time</span>'을 클릭합니다.</p>
-    <img class="img_in_content border_line" src="./images/install/click_download.png" alt="click_download.png">
+    <img class="img_in_content border_line size_down" src="./images/install/click_download.png" alt="click_download.png">
     <p>'<span>R-x.x.x for Windows</span>' 페이지에서 '<span>Download R-x.x.x for Windows</span>'를 클릭합니다.</p>
     <p>다운로드가 완료되면 브라우저에 나타난 파일 이름을 클릭하거나 파일 탐색기의 Downloads 폴더에서 해당 파일을 실행합니다.<br />
     그러면 '<span>사용자 계정 컨트롤</span>' 창이 나타납니다.<br />
     '<span>이 앱이 디바이스를 변경할 수 있도록 허용하시겠어요?</span>' 라고 나오는데 '<span>예</span>'를 클릭합니다.</p>
     <img class="img_in_content" src="./images/install/lang.png" alt="lang">
     <p>'<span>설치 언어 선택</span>' 창이 나타나면 '<span>한국어</span>'를 확인하고 '<span>확인</span>' 버튼을 클릭합니다.</p>
-    <img class="img_in_content" src="./images/install/install_info.png" alt="install_info">
+    <img class="img_in_content size_down" src="./images/install/install_info.png" alt="install_info">
     <p>'<span>설치 - R for Windows x.x.x - 정보</span>' 창이 나타나면 정보를 읽고 '<span>다음(N)</span>' 버튼을 클릭합니다.</p>
-    <img class="img_in_content" src="./images/install/install_path.png" alt="install_path">
+    <img class="img_in_content size_down" src="./images/install/install_path.png" alt="install_path">
     <p>기본값 또는 원하는 설치 위치를 선택하고 '<span>다음(N)</span>' 버튼을 클릭합니다.</p>
-    <img class="img_in_content" src="./images/install/component.png" alt="component">
+    <img class="img_in_content size_down" src="./images/install/component.png" alt="component">
     <p>구성 요소를 확인하고 '<span>다음(N)</span>' 버튼을 클릭합니다.</p>
-    <img class="img_in_content" src="./images/install/startup_no.png" alt="startup_no">
+    <img class="img_in_content size_down" src="./images/install/startup_no.png" alt="startup_no">
     <p>스타트업 옵션을 확인하고 '<span>다음(N)</span>' 버튼을 클릭합니다.</p>
-    <img class="img_in_content" src="./images/install/start_menu_folder.png" alt="start_menu_folder">
+    <img class="img_in_content size_down" src="./images/install/start_menu_folder.png" alt="start_menu_folder">
     <p>시작 메뉴 폴더 선택을 확인하고 '<span>다음(N)</span>' 버튼을 클릭합니다.</p>
-    <img class="img_in_content" src="./images/install/additional.png" alt="additional">
+    <img class="img_in_content size_down" src="./images/install/additional.png" alt="additional">
     <p>추가 사항 적용을 확인하고 '<span>다음(N)</span>' 버튼을 클릭합니다.</p>
-    <img class="img_in_content" src="./images/install/installing.png" alt="installing"><br />
-    <img class="img_in_content" src="./images/install/install_done.png" alt="install_done">
+    <img class="img_in_content size_down" src="./images/install/installing.png" alt="installing"><br />
+    <img class="img_in_content size_down" src="./images/install/install_done.png" alt="install_done">
     <p>설치가 완료되었습니다.<br />
     '<span>완료(F)</span>' 버튼을 클릭합니다.</p>
   </section>  
