--- a/r/r_introduce.html
+++ b/r/r_introduce.html
@@ -22,7 +22,7 @@
   </header>
   <nav id="nav_sub">
     <ul>
-        <li><a href="./r.html">개요</a></li>
+        <li><a href="./r.html">머리말</a></li>
         <li class="selected_li">소개</li>
         <li><a href="./r_install.html">설치1</a></li>
     </ul>
