--- a/python/python_install.html
+++ b/python/python_install.html
@@ -15,7 +15,7 @@
       <ul id="nav_top_ul">
         <li  class="selected_nav_top">파이썬</li>
         <li><a href="../r/r.html">R</a></li>
-        <li>오라클</li>
+        <li><a href="../oracle/oracle.html">오라클</a></li>
         <li>HTML/CSS</li>
       </ul>
     </nav>
