--- a/r/r.html
+++ b/r/r.html
@@ -15,7 +15,7 @@
       <ul id="nav_top_ul">
         <li><a href=../python/python.html>파이썬</a></li>
         <li class="selected_nav_top">R</li>
-        <li>오라클</li>
+        <li><a href="../oracle/oracle.html">오라클</a></li>
         <li>HTML/CSS</li>
       </ul>
     </nav>
