--- a/oracle/oracle.html
+++ b/oracle/oracle.html
@@ -38,7 +38,7 @@
     <p>데이터베이스는 크게 <span>관계형 데이터베이스</span>와 관계형 데이터베이스가 아닌 것으로 나눌 수 있는데 여기서는 관계형 데이터베이스에 대해서 다루고자 합니다.</p>
     <p>관계형 데이터베이스에는 오라클, Microsoft SQL Server, Microsoft Access 등이 있는데 여기서는 '<span>오라클 데이터베이스</span>'에 대해서 다루겠습니다.</p>
     <div class="section_img">
-      <img src="./images/oracle.png" alt="oracle">
+      <img class="size_down" src="./images/oracle.png" alt="oracle">
     </div>
   </section>
   <footer>j1wook@naver.com</footer>
