--- a/oracle/oracle.html
+++ b/oracle/oracle.html
@@ -23,8 +23,8 @@
   <nav id="nav_sub">
     <ul>
         <li class="selected_li">머리말</li>
-        <li>소개</li>
-        <li>설치1</li>
+        <li><a href="./oracle_introduce.html">소개</a></li>
+        <li><a href="./oracle_install.html">설치1</a></li>
     </ul>
   </nav>
   <section>
