--- a/oracle/oracle_introduce.html
+++ b/oracle/oracle_introduce.html
@@ -24,7 +24,7 @@
     <ul>
         <li><a href="./oracle.html">머리말</a></li>
         <li class="selected_li">소개</li>
-        <li>설치1</li>
+        <li><a href="./oracle_install.html">설치1</a></li>
     </ul>
   </nav>
   <section>
