--- a/oracle/oracle_install.html
+++ b/oracle/oracle_install.html
@@ -34,15 +34,15 @@
     <p>설치하기로 정했다면 오라클 공식 홈페이지(<a href="https://www.oracle.com/kr/database/technologies/" target="_blank"><span><u>https://www.oracle.com/kr/database/technologies/</u></span></a>)에 접속합니다.</p>
     <img class="img_in_content border_line" src="./images/install/oracle_web.png" alt="oracle_web">
     <p>스크롤을 살짝 내려 '<span>Oracle database 19c 다운로드</span>'를 클릭합니다.</p>
-    <img class="img_in_content border_line" src="./images/install/download.png" alt="download">
+    <img class="img_in_content border_line size_down" src="./images/install/download.png" alt="download">
     <p>19c의 윈도우 버전 <span>ZIP</span>을 클릭합니다.</p>
-    <img class="img_in_content border_line" src="./images/install/accept.png" alt="accept">
+    <img class="img_in_content border_line size_down" src="./images/install/accept.png" alt="accept">
     <p>화면 중앙에 라이선스 동의 창이 나타나면 체크박스에 <span>체크</span>하고 아래 <span>Download</span> 버튼을 클릭합니다.</p>
-    <img class="img_in_content img_border_radius" src="./images/install/account.png" alt="account">
+    <img class="img_in_content img_border_radius size_down" src="./images/install/account.png" alt="account">
     <p>아래 <span>계정 만들기</span>를 클릭합니다.</p>
-    <img class="img_in_content border_line" src="./images/install/make_account.png" alt="make_account" width="646.8" height="404.8">
+    <img class="img_in_content border_line size_down" src="./images/install/make_account.png" alt="make_account" width="646.8" height="404.8">
     <div style="text-align:center;">.<br />.<br />.<br /></div>
-    <img class="img_in_content border_line" src="./images/install/click_make_account.png" alt="click_make_account">
+    <img class="img_in_content border_line size_down" src="./images/install/click_make_account.png" alt="click_make_account">
     <p>정보들을 입력하는데 비밀번호는 영문 대문자와 소문자가 모두 있어야 하는게 특징입니다.<br />
     정보들을 입력했으면 '<span>계정 만들기</span>'를 클릭합니다.</p>
   </section>
