--- a/python/python.html
+++ b/python/python.html
@@ -25,6 +25,7 @@
         <li class="selected_li">머리말</li>
         <li><a href=python_introduce.html>소개</a></li>
         <li><a href=python_install.html>설치</a></li>
+        <li><a href="./python_video.html">추천영상</a></li>
       </ul>
     </nav>
     <section>
