--- a/python/python_install.html
+++ b/python/python_install.html
@@ -25,6 +25,7 @@
       <li><a href=python.html>머리말</a></li>
       <li><a href=python_introduce.html>소개</a></li>
       <li class="selected_li">설치</li>
+      <li><a href="./python_video.html">추천영상</a></li>
     </ul>
   </nav>
   <section>
