--- a/python/python_introduce.html
+++ b/python/python_introduce.html
@@ -25,6 +25,7 @@
 			<li><a href=python.html>머리말</a></li>
 			<li class="selected_li">소개</li>
 			<li><a href=python_install.html>설치</a></li>
+			<li><a href="./python_video.html">추천영상</a></li>
 		</ul>
 	</nav>
 	<section>
